# gums_cdcl

./: .gitignore  Abkürzungsverzeichnis  Aufgaben  CMakeLists.txt  CNFParser.cpp  CNFParser.h  Clause.cpp  Clause.h  Heuristic.cpp  Heuristic.h  Idee  Info  Literal.cpp  Literal.h  Mini-Architektur  README.md  Solver.cpp  Solver.h  Timer.h  Trail.cpp  Trail.h  UML  main.cpp
Sequenzen/: Backtracking  Gesamt-Loop solve()  Klausel-Lifecycle  Konfliktanalyse (1-UIP)  Propagation mit 2-Watched-Literals
examples/: 4Queens.cnf  Sudoku1_ohne.cnf  test.cnf
